Update heatmap to forked version

--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
   "devDependencies": {
     "eslint": "^1.7.3",
     "eslint-config-mourner": "^1.0.1",
-    "simpleheat": "~0.2.0",
+    "simpleheat": "victorperezpiqueras/simpleheat#patch-1",
     "uglify-js": "^2.5.0"
   },
   "eslintConfig": {
